main scene barebone